Added new things

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Human Lovers</title>
 <link rel="stylesheet" href="css/hulostyle.css">
+
 </head>
 <body>
  <header>
@@ -37,6 +38,9 @@
      all right reserved 2020
    </p>
  </footer>
+ <script src="Javascript/ script-hulo.js"></script>
+ 
+
 
 </body>
 
